# las-bambas-conflict-analysis

./: .gitignore  CITATION.cff  Conflicto_bambas.csv  README.md  ReporteFechaxConflicto_bambas.csv  Spatial_Analysis.ipynb  environment-lock.yml  environment.yml  pyproject.toml  requirements-lock.txt  requirements.txt
Code/: Cluster_AssociationRules.ipynb  Spatial_Analysis.ipynb
Data/: Conflicto_bambas.csv  ReporteFechaxConflicto_bambas.csv  metadata.csv
src/las_bambas_analysis/: __init__.py  cluster_plots.py  paths.py  spatial_figures.py  spatial_geometry.py  water.py
